# moniof

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  middleware.rs  mongo.rs  mongo_events.rs  options.rs  prom.rs  slack.rs  sqlx_layer.rs  stats.rs  task_ctx.rs
src/config/: global.rs  http.rs  mod.rs
src/core/: mod.rs  stats.rs  task_ctx.rs
src/instrumentation/: mod.rs  mongo_events.rs  sql_events.rs
src/observability/: mod.rs  of.rs  prom.rs  slack.rs
src/services/: http.rs
