[package]
name = "moniof"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Actix middleware to monitor over featch and detect N+1 / overfetch queries (Mongo + SQL agnostic)"
authors = ["Snm Maurya <sxmmaurya@gmail.com>", "Deepak Maurya <deepxmaurya@gmail.com>"]
documentation = "https://docs.rs/moniof"
homepage = "https://github.com/xsmmaurya/moniof"
repository = "https://github.com/xsmmaurya/moniof"
readme = "README.md"
license = "MIT"
keywords = ["actix", "n+1", "middleware", "mongodb", "sqlx", "observability"]

[dependencies]
actix-web = "4"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
once_cell = "1.19"
ahash = "0.8"
time = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
dashmap = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
mongodb = { version = "2", optional = true, features = ["tokio-runtime"] }
prometheus = "0.14"

[features]
default = ["mongodb"]
mongodb = ["dep:mongodb"]
# sqlx = ["dep:sqlx"]